--- a/Homepage.html
+++ b/Homepage.html
@@ -81,12 +81,23 @@
     </div>
 </div>
 
-<!---Paragraph  --->
-<body style='margin:30px;'>
-<h1>About Us</h1>
-  <p class="lead-text-center">We Truly Care We want to be the auto motors company you turn to for all your vehicle needs. For the many years we have been in business, we have been striving to provide our clients the best quality cars possible to gain their full satisfaction. And they have shown their appreciation by coming back to us repeatedly. We want nothing more than to keep you and your vehicle safe and on the road. Whether you want a domestic or a high performance exotic car, we are the dealers for you.
-
-We Love Cars Our team come to work smiling and are always happy. They have a passion for cars and are fully prepared to help you pick the right one. Leave It To Us Doing it yourself does not always pan out. Rely on our knowledge and experience instead. Our Promise To You We promise to always provide value and outstanding service and find the right vehicle for you.</p>
+<!---Jumbotron --->
+<div class="container">
+	<div class="jumbotron">
+		<h1>Welcome to Trader Joes</h1>
+		<p>The best traders in town offering an uncomparable service, come see us today!<br>
+		Offering a wide range of quality used cars and a professional service. We are committed to providing you with the highest level of service. For most people, buying a new car can be a daunting experience, especially when you are worried about choosing the right one. So, we want make the process as easy and enjoyable as possible for you. We genuinely care about your car and your experience. Our first-time customers continually become our long term customers time and time again, choosing us and telling family and friends for all their automotive needs. We are committed to what we do! Our employees are highly skilled and have years of experience. Most of all: they love cars and care about yours. Whether it is our quick, quality, friendly service or the honesty and value we bring to every interaction, our customers love us. At Trader Joes, We are committed to serving you with quality and value. Visit us today for a viewing, and see what our commitment to quality is all about. We may not be related, but you will feel like we are family.<br>
+    <br>Opening Times<br>
+    Monday	10:00 - 19:00<br>
+    Tuesday	10:00 - 19:00<br>
+    Wednesday	10:00 - 19:00<br>
+    Thursday	10:00 - 19:00<br>
+    Friday	10:00 - 19:00<br>
+    Saturday	10:00 - 19:00<br>
+    Sunday	12:00 - 16:00<br>
+Alternative times available by appointment.</p>
+		<p><a href="usedcars.html" target="_blank" class="btn btn-success btn-lg">See our current stock</a></p>
+	</div>
 
 
 
