--- a/usedcars.html
+++ b/usedcars.html
@@ -1,20 +1,99 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title> </title>
-    </head>
-    <body>
-<nav>
-        <ul>
-            <li><a href="Home.html">Home</a></li>
-            <li><a href="Aboutus.html">About us</a></li>
-            <li><a href="usedcars.html">Used cars</a></li>
-            <li><a href="testimonials.html">Testimonials</a></li>
-            <li><a href="Contact us.html">Contact us</a></li>
-        </ul>
-            </nav>
- <footer>
-    <p>Trader Joes &copy;2016</p>
-</footer>  
-    </body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="../../favicon.ico">
+    <title>Trader Joes</title>
+    <!-- JavaScript  -->
+    
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <!-- Custom styles for this template -->
+    <link href="Website.css" rel="stylesheet">
+  </head>
+
+<!-- NAVBAR
+================================================== -->
+  <body>
+    <!-- Fixed navbar -->
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+  <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a href="Homepage.html" class="navbar-brand">Trader Joes</a>
+        </div>
+        <!-- Collection of nav links and other content for toggling -->
+        <div id="navbarCollapse" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="Homepage.html">Home</a></li>
+                <li><a href="Aboutus.html">About Us</a></li>
+                <li><a href="usedcars.html">Used Cars</a></li>
+                <li><a href="testimonials.html">Testimonials</a></li>
+                <li><a href="contactus.html">Contact Us</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#">Login</a></li>
+            </ul>
+        </div>
+    </nav>
+</div>
+
+
+<!-- Container (Used Cars) -->
+<div class="container-fluid text-center bg-grey">
+  <h2>Our Used Cars</h2><br>
+  <h4>What we have on offer currently</h4>
+  <div class="row text-center">
+    <div class="col-sm-4">
+      <div class="thumbnail">
+        <img src="images/e63.jpg" alt="E63" width="400" height="300">
+        <p><strong>Mercedes Benz E63</strong></p>
+        <p>PUT IN CAR SPECS</p>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="thumbnail">
+        <img src="images/c63.jpg" alt="C63" width="400" height="300">
+        <p><strong>Mercedes Benz E63</strong></p>
+        <p>PUT IN CAR SPECS</p>
+      </div>
+    </div>
+    <div class="col-sm-4">
+      <div class="thumbnail">
+        <img src="images/audir8.jpg" alt="R8" width="400" height="300">
+        <p><strong>Audi R8</strong></p>
+        <p>PUT IN CAR SPECS</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!---Paragraph  --->
+<body style='margin:30px;'>
+    <h1>Our Used Cars</h1>
+  <p class="lead-text-center">We Truly Care We want to be the auto motors company you turn to for all your vehicle needs. For the many years we have been in business, we have been striving to provide our clients the best quality cars possible to gain their full satisfaction. And they have shown their appreciation by coming back to us repeatedly. We want nothing more than to keep you and your vehicle safe and on the road. Whether you want a domestic or a high performance exotic car, we are the dealers for you.
+
+We Love Cars Our team come to work smiling and are always happy. They have a passion for cars and are fully prepared to help you pick the right one. Leave It To Us Doing it yourself does not always pan out. Rely on our knowledge and experience instead. Our Promise To You We promise to always provide value and outstanding service and find the right vehicle for you.</p>
+
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="moreless.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+  </body>
 </html>
