--- a/Aboutus.html
+++ b/Aboutus.html
@@ -52,7 +52,7 @@
     <!-- Carousel with Car Photos
     ================================================== -->
     <div class="carsCarousel">
-    <div id="carscarousel" class="carousel slide" data-ride="carousel">
+    <div id="carsCarousel" class="carousel slide" data-ride="carousel">
         <!-- Carousel indicators -->
         <ol class="carousel-indicators">
             <li data-target="#carsCarousel" data-slide-to="0" class="active"></li>
@@ -62,20 +62,20 @@
         <!-- Wrapper for carousel items -->
         <div class="carousel-inner">
             <div class="item active">
-                <img src="../images/ml63.jpeg" alt="Mercedes Benz - ML63">
+                <img src="../images/rrsvr.png" alt="Range Rover SVR">
             </div>
             <div class="item">
-                <img src="../images/rrsvr.png" alt="Range Rover SVR">
+                <img src="../images/ml63.jpeg" alt="Mercedes Benz - ML63">
             </div>
             <div class="item">
                 <img src="../images/rs5.jpg" alt="Audi RS5">
             </div>
         </div>
         <!-- Carousel controls -->
-        <a class="carousel-control left" href="#myCarousel" data-slide="prev">
+        <a class="carousel-control left" href="#carsCarousel" data-slide="prev">
             <span class="glyphicon glyphicon-chevron-left"></span>
         </a>
-        <a class="carousel-control right" href="#myCarousel" data-slide="next">
+        <a class="carousel-control right" href="#carsCarousel" data-slide="next">
             <span class="glyphicon glyphicon-chevron-right"></span>
         </a>
     </div>
