--- a/Homepage.html
+++ b/Homepage.html
@@ -42,7 +42,7 @@
                 <li><a href="contactus.html">Contact Us</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Login</a></li>
+                <li><a href="login.html">Login</a></li>
             </ul>
         </div>
     </nav>
@@ -52,7 +52,7 @@
     <!-- Carousel with Car Photos
     ================================================== -->
     <div class="carsCarousel">
-    <div id="carscarousel" class="carousel slide" data-ride="carousel">
+    <div id="carsCarousel" class="carousel slide" data-ride="carousel">
         <!-- Carousel indicators -->
         <ol class="carousel-indicators">
             <li data-target="#carsCarousel" data-slide-to="0" class="active"></li>
@@ -72,10 +72,10 @@
             </div>
         </div>
         <!-- Carousel controls -->
-        <a class="carousel-control left" href="#myCarousel" data-slide="prev">
+        <a class="carousel-control left" href="#carsCarousel" role='button' data-slide="prev">
             <span class="glyphicon glyphicon-chevron-left"></span>
         </a>
-        <a class="carousel-control right" href="#myCarousel" data-slide="next">
+        <a class="carousel-control right" href="#carsCarousel" data-slide="next">
             <span class="glyphicon glyphicon-chevron-right"></span>
         </a>
     </div>
