--- a/contactus.html
+++ b/contactus.html
@@ -56,10 +56,10 @@
 <h1> How to get to us</h1>
 <p class="lead-text-center">Our address is pinned on google maps, it's easy to get to us!<br>
     our adderess is<br>
-    ADDRESS HERE<br>
-    Call us today on : 4543645
-    Email us on: </p>
-<div>
+    Joes Rd, Cornard Tye, Great Cornard, Sudbury, Suffolk, UK<br>
+    Call us today on : 0204543645
+    Email us on:TraderJoes@cartrade.co.uk </p>
+  <div>
 
 <div class="col-md-6">
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2454.6705344156526!2d0.7739185159659921!3d52.031099480097424!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d9aab194799a93%3A0x1fb0c086afda0ca0!2sJoes+Rd%2C+Cornard+Tye%2C+Great+Cornard%2C+Sudbury%2C+Suffolk+CO10%2C+UK!5e0!3m2!1sen!2sus!4v1458655918213" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe></div> 
@@ -67,19 +67,19 @@
 
 
 <!--Contact form -->   
-<div class="col-sm-4">
+<div class="col-md-6">
   <h2>Contact Us</h2>
   <form class="form-horizontal" role="form">
     <div class="form-group">
       <label class="control-label col-sm-2" for="name">Name:</label>
       <div class="col-sm-10">
-        <input type="email" class="form-control" id="name" placeholder="Enter name">
+        <input type="Text" class="form-control" id="name" placeholder="Enter name">
       </div>
     </div>
  <div class="form-group">
       <label class="control-label col-sm-2" for="email">Email:</label>
       <div class="col-sm-10">          
-        <input type="password" class="form-control" id="email" placeholder="Enter email">
+        <input type="email" class="form-control" id="email" placeholder="Enter email">
       </div>
     </div>
   <div class="col-sm-offset-2 col-sm-10">
