--- a/usedcars.html
+++ b/usedcars.html
@@ -58,21 +58,32 @@
       <div class="thumbnail">
         <img src="images/e63.jpg" alt="E63" width="400" height="300">
         <p><strong>Mercedes Benz E63</strong></p>
-        <p>PUT IN CAR SPECS</p>
+        <p>Mercedes-AMG E 63
+
+        THE BENCHMARK IN PERFORMANCE, DYNAMISM AND EFFICIENCY.
+        The Mercedes-AMG E 63 boasts a pioneering new AMG design idiom, thrilling driving dynamics, a substantially extended scope of standard equipment and appointments and diverse options for individual differentiation – from discreetly sporty to expressively dynamic.
+        AMG 5.5-LITER V8 BITURBO ENGINE
+        Handcrafted by Mercedes-AMG One Man – One Engine
+        0-100 KM/H: 4.2 S (3.7 S*)
+        410 KW (557 HP)
+      * with 4MATIC £49000</p>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
         <img src="images/c63.jpg" alt="C63" width="400" height="300">
         <p><strong>Mercedes Benz E63</strong></p>
-        <p>PUT IN CAR SPECS</p>
+        <p>THE BENCHMARK IN PERFORMANCE, DYNAMISM AND EFFICIENCY.
+          Absurd power and blistering acceleration are not the E63’s only party tricks; thanks to computer magic and an excellent suspension, it’s also quite agile. But oh, that mighty 577-hp 5.5-liter twin-turbo V-8 is a sweetheart of an engine. A seven-speed automatic and all-wheel drive are standard, as are 14-way power-operated and heated/cooled seats.
+          £55000</p>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
         <img src="images/audir8.jpg" alt="R8" width="400" height="300">
         <p><strong>Audi R8</strong></p>
-        <p>PUT IN CAR SPECS</p>
+        <p>Audi R8 4.2 QUATTRO 2008, Semi Automatic R Tronic (F1 Paddle Shit Gears) Full AUDI Service History Just Been Serviced, First To See Will Buy, Excellent Condition. 44,000 Miles, Auto Bio Xenon Headlights, Warranty till Feb 2017, Carbon Look key, Carbon Engine Bay (Rare Option) Engine Bay Lighting, Home Link Light Package, Black Electrically Adjustable Leather Interior with Alcantara Headlining, Carbon Trim Interior, Bang & Olufsen Sound System, Aux Input, CD Changer, Audi Navigation Plus, Front & Rear Acoustic Parking System, Bluetooth Phone Preparation, Auto Hill Hold Assist, Aluminium Interior Trim, Electric Windows, Auto-dimming Electric Folding Door Mirrors, Heated Seats, Automatic Climate Control, Automatic Headlights, Heated Rear Windscreen, Driver Information Display, Multi-function Steering Wheel, Audi 19'' 5-Arm Double Spoke Alloy Wheels With Blue Wrapped Calipers.
+        £35000</p>
       </div>
     </div>
   </div>
